--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronin Sistemas</title>
+    <link rel="icon" type="image/x-icon" href="/img/10513374_765533070134144_8598827175172772073_n.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -17,20 +18,25 @@
 
 <Body class="bg-blue-dark3">
     <header class="">
-        <div class="d-flex" id="logo-menu">
+        <div class="d-flex flex-colum" id="logo-container">
             <div class="col-md-3 col-sm-3 col xs-4" id="logo">
-                <img src="/img/flyer logo.jpg" alt="logo" class="w-100 h-100">
+                <img src="/img/logo.png" alt="logo" class="w-100 h-100">
             </div>
-            <div class="col-md-9 col-sm-9 col-xs-8" id="menu">
-                <ul class="white">
+            <div class="col-md-9 col-sm-9 col-xs-8 " id="menu">
+                <ul class="d-flex white justify-content-center">
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">Manutenção</a></li>
+                    <li><a href="">wi-fi</a></li>
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
             </div>
-            <div>
-                contato
+            <!--   -->
+            <div class="d-flex justify-content-center" id="contatobox">
+                <div class="" id="contato">
+                    <a href="https://wa.me/5521981860460" target="_blank">
+                        <img src="/img/zap.png" alt="whatsapp" class="">
+                    </a>                
+                </div>
             </div>
         </div>
         </div>
