--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
 </head>
 
-<Body class="bg-blue-dark3">
+<Body class="bg-black">
     <header class="">
-        <div class="d-flex flex-colum" id="logo-container">
+        <div class="d-flex" id="logo-container">
             <div class="col-md-3 col-sm-3 col xs-4" id="logo">
                 <img src="/img/logo.png" alt="logo" class="w-100 h-100">
             </div>
             <div class="col-md-9 col-sm-9 col-xs-8 " id="menu">
                 <ul class="d-flex white justify-content-center">
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">wi-fi</a></li>
+                    <li><a href="">Wi-fi</a></li>
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
             </div>
-            <!--   -->
+            <div class="" id="patch">
             <div class="d-flex justify-content-center" id="contatobox">
                 <div class="" id="contato">
                     <a href="https://wa.me/5521981860460" target="_blank">
