--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
             <div class="col-md-3 col-sm-3 col xs-4" id="logo">
                 <img src="/img/logo.png" alt="logo" class="w-100 h-100">
             </div>
-            <div class="col-md-9 col-sm-9 col-xs-8 " id="menu">
+            <div class="col-md-9 col-sm-9 col-xs-8 d-flex" id="menu">
                 <ul class="d-flex white">
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">Wi-fi</a></li>
+                    <li><a href="">Wi-Fi</a></li>
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
+                <!-- <div class="" id="patch"> -->
+                    <div class="" id="contatobox">
+                            <a href="https://wa.me/5521981860460" target="_blank">
+                            <img src="/img/zap.png" alt="whatsapp" class="">
+                            </a>                           
+                    </div>
             </div>
-            <!-- <div class="" id="patch"> -->
-            <div class="d-flex justify-content-center" id="contatobox">
-                <div class="" id="contato">
-                    <a href="https://wa.me/5521981860460" target="_blank">
-                        <img src="/img/zap.png" alt="whatsapp" class="">
-                    </a>                
-                </div>
-            </div>
+            
         </div>
         </div>
     </header>
