--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<Body class="bg-black">
+<Body class="col-12">
     <header class="">
         <div class="d-flex" id="logo-container">
             <div class="col-md-3 col-sm-3 col xs-4" id="logo">
@@ -29,12 +29,12 @@
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
-                <!-- <div class="" id="patch"> -->
+                <!-- <div class="" id="patch">
                     <div class="" id="contatobox">
                             <a href="https://wa.me/5521981860460" target="_blank">
                             <img src="/img/zap.png" alt="whatsapp" class="">
                             </a>                           
-                    </div>
+                    </div> -->
             </div>
             
         </div>
