--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 
 <Body class="col-12">
-    <header class="">
-        <div class="d-flex" id="logo-container">
-            <div class="col-md-3 col-sm-3 col xs-4" id="logo">
+    <header class="position-relative">
+        <div class="d-flex position-relative" id="logo-container">
+            <div class="" id="logo">
                 <img src="/img/logo.png" alt="logo" class="w-100 h-100">
             </div>
-            <div class="col-md-9 col-sm-9 col-xs-8 d-flex" id="menu">
-                <ul class="d-flex white">
+            <div class="container">                  
+                <ul class="white menu">
                     <li><a href="">Inicio</a></li>
                     <li><a href="">Wi-Fi</a></li>
                     <li><a href="">Cftv</a></li>
@@ -34,8 +34,8 @@
                             <a href="https://wa.me/5521981860460" target="_blank">
                             <img src="/img/zap.png" alt="whatsapp" class="">
                             </a>                           
-                    </div> -->
-            </div>
+                    </div> 
+            </div> -->
             
         </div>
         </div>
