--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronin Sistemas</title>
     <link rel="icon" type="image/x-icon" href="/img/10513374_765533070134144_8598827175172772073_n.jpg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/root.css">
     <link rel="stylesheet" href="./css/colors.css">
@@ -113,11 +114,11 @@
 
                 <div class="col-4 d-flex justify-content-center align-items-center gap-3" id="footer-div">
                     <a href="https://github.com/lthurler" target="_blank">
-                    <img src="./img/pnghut_social-media-github-logo-git.png" alt="github"></a>
+                        <i class="bi bi-github"></i></a>
                     <a href="https://www.linkedin.com/in/leandro-thurler-6687b223/" target="_blank">
-                    <img src="./img/linkedin social media icon_3609691.png" alt="linkedin"></a>
+                        <i class="bi bi-linkedin"></i></a>
                     <a href="https://wa.me/5521981860460" target="_blank">
-                    <img src="./img/pnghut_flat-whatsapp-logo.png" alt="zap"></a>
+                        <i class="bi bi-whatsapp"></i></a>
 
                 </div>
 
