--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <main>
             <!-- <section class="conteudo-principal d-flex flex-row justify-content-center align-content-center"> -->
-            <section>
+            <section class="py-3">
                 <div class="container">
                     <ul class="slides">
                         <input type="radio" name="radio-btn" id="img-1" checked />
@@ -106,10 +106,9 @@
                 </div>
             </section>            
         </main>
-        <footer class="pt-2">
+        <footer class="pt-5">
             <div class="container d-flex justify-content-center row">
                 <div class="col-4">
-
                 </div>
 
                 <div class="col-4 d-flex justify-content-center align-items-center gap-3" id="footer-div">
@@ -119,15 +118,11 @@
                         <i class="bi bi-linkedin"></i></a>
                     <a href="https://wa.me/5521981860460" target="_blank">
                         <i class="bi bi-whatsapp"></i></a>
-
                 </div>
 
                 <div class="col-4">
-
                 </div>
-
-            </div>
-            
+            </div>            
         </footer>
     </div>
     </Body>
