--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <main>
             <!-- <section class="conteudo-principal d-flex flex-row justify-content-center align-content-center"> -->
-            <section class="py-3">
+            <section class="pt-4">
                 <div class="container">
                     <ul class="slides">
                         <input type="radio" name="radio-btn" id="img-1" checked />
