inicio nova branch

--- a/index.html
+++ b/index.html
@@ -6,38 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronin Sistemas</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css">    
     <link rel="stylesheet" href="/css/root.css">
     <link rel="stylesheet" href="/css/colors.css">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
-<Body class="bg-blue-dark3">
-    <header class="">
-        <div class="d-flex" id="logo-menu">
-            <div class="col-md-3 col-sm-3 col xs-4" id="logo">
-                <img src="/img/flyer logo.jpg" alt="logo" class="w-100 h-100">
-            </div>
-            <div class="col-md-9 col-sm-9 col-xs-8" id="menu">
-                <ul class="white">
+<Body>
+    <header>
+        <img src="/img/flyer logo.jpg" alt="logo">            
+            <nav id="menu">
+                <ul>
                     <li><a href="">Inicio</a></li>
                     <li><a href="">Manutenção</a></li>
+                    <li><a href="">Redes</a></li>
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
-            </div>
-            <div>
-                contato
-            </div>
-        </div>
-        </div>
+            </nav>            
     </header>
+
     <main>
 
     </main>
+    
+    <footer>
+
+    </footer>
 </Body>
 
 </html>
