--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <Body>
     <header>
-        <img src="/img/flyer logo.jpg" alt="logo">            
+        <img src="/img/logo novo transp.png" alt="logo cartao">     
+
             <nav id="menu">
                 <ul>
                     <li><a href="">Inicio</a></li>
@@ -24,13 +25,14 @@
                     <li><a href="">Cftv</a></li>
                     <li><a href="">Websites</a></li>
                 </ul>
-            </nav>            
+            </nav>
+        <!-- <img src="/img/logo cru.png" alt="logo">            -->
     </header>
 
     <main>
 
     </main>
-    
+
     <footer>
 
     </footer>
