formato sessoes e footer

--- a/index.html
+++ b/index.html
@@ -21,20 +21,19 @@
         <nav id="menu">
             <ul>
                 <li><a href="">Inicio</a></li>
-                <li><a href="">Manutenção</a></li>
-                <li><a href="">Redes</a></li>
-                <li><a href="">Cftv</a></li>
                 <li><a href="">Websites</a></li>
+                <li><a href="">Cftv</a></li>
+                <li><a href="">Redes</a></li>
+                <li><a href="">Suporte</a></li>
             </ul>
         </nav>
 
-        <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Oi, mais informação, por favor!" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Ronin, te vi no google,preciso da ajuda de vocês" target="_blank">
             <button><i class="fa-brands fa-whatsapp fa-lg" style="color: #ffffff;"></i>  (21) 98186-0460</button>
         </a>
     </header>
 
-    <main>
-        <h1>Ronin sistemas</h1>
+    <main>        
         <section id="home">
             <article class="container">
                 <ul class="slides">                    
@@ -43,7 +42,13 @@
                             <img id="primeira-imagem"
                                 src="./img/1904.i402.011_Web development isometric concept infographics.png" alt="slide1" />
                         </div>                        
-                    </li>        
+                    </li>
+                    
+                    <li class="slide-container">
+                        <div class="slide">
+                            <h1>Desenvolvimento de sites<br>Câmeras de segurança<br>Redes WIFI<br>Suporte técnico</h1>                           
+                        </div>
+                    </li>
                     
                     <li class="slide-container">
                         <div class="slide">
@@ -77,14 +82,14 @@
             </article>
         </section>
 
-        <section id="cameras">           
-            <article id="camera-container">
+        <section id="web">           
+            <article class="section-container" id="web-container">
                 <div>
-                    <img src="/img/tilt.svg" alt="divisor">
+                    <img class="direita" src="/img/tilt.svg" alt="divisor">
                 </div>
-                <div id="camera-conteudo">
+                <div class="section-conteudo">
                     <h2>Câmeras de segurança</h2>
-                    <div id="camera-texto">
+                    <div class="section-texto">
                         <div>
                             <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
                             <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
@@ -98,11 +103,97 @@
             </article>
         </section>
 
+        <section id="camera">
+            <article class="section-container">
+                <div>
+                    <img class="esquerda" src="/img/tilt.svg" alt="divisor">
+                </div>
+                <div class="section-conteudo-esquerda">
+                    <h2>Câmeras de segurança</h2>
+                    <div class="section-texto-esquerda">
+                        <div>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                        </div>
+                        <div>
+                            <img src="/img/camera_bullet_inteligente_full_hd_1080p_ip67_120_ir_30mts_2_8mm_intelbras_wi_fi_im5_s_3823_2_54c0a06a65218ff5da15bd7591ab32eb.webp"
+                                alt="">
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <section id="redes">
+            <article class="section-container">
+                <div>
+                    <img class="direita" src="/img/tilt.svg" alt="divisor">
+                </div>
+                <div class="section-conteudo">
+                    <h2>Câmeras de segurança</h2>
+                    <div class="section-texto">
+                        <div>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                        </div>
+                        <div>
+                            <img src="/img/camera_bullet_inteligente_full_hd_1080p_ip67_120_ir_30mts_2_8mm_intelbras_wi_fi_im5_s_3823_2_54c0a06a65218ff5da15bd7591ab32eb.webp"
+                                alt="">
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>        
+
+        <section id="micro">
+            <article class="section-container">
+                <div>
+                    <img class="esquerda" src="/img/tilt.svg" alt="divisor">
+                </div>
+                <div class="section-conteudo-esquerda">
+                    <h2>Câmeras de segurança</h2>
+                    <div class="section-texto-esquerda">
+                        <div>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                        </div>
+                        <div>
+                            <img src="/img/camera_bullet_inteligente_full_hd_1080p_ip67_120_ir_30mts_2_8mm_intelbras_wi_fi_im5_s_3823_2_54c0a06a65218ff5da15bd7591ab32eb.webp"
+                                alt="">
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 
-    <footer>
+    <footer>        
+            <div>
+                <h2>Ronin Sistemas</h2>
 
+                <nav>
+                    <ul>
+                        <li><a href="">Inicio</a></li>
+                        <li><a href="">Websites</a></li>
+                        <li><a href="">Cftv</a></li>
+                        <li><a href="">Redes</a></li>
+                        <li><a href="">Suporte</a></li>
+                    </ul>
+                </nav>
 
+                <nav id="social-link">                    
+                    <a href="https://www.facebook.com/ronintisolucoes" target="_blank"><img src="/img/facebook.svg" alt="logo do facebook"></a>
+                    <a href="https://www.instagram.com/ronin.sistemas/" target="_blank"><img src="/img/instagram.svg" alt="logo do instagram"></a>
+                    <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Ronin, te vi no google,preciso da ajuda de vocês" target="_blank"><img src="/img/whatsapp.svg" alt="logo do whatsapp"></a>                    
+                </nav>
+            </div>
+
+            <div id="copyright">
+                <p>Ronin Sistemas ©2024 - Todos os direitos reservados</p>
+            </div>
     </footer>
 </Body>
     <script src="./js/main.js"></script>
