--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronin Sistemas</title>
+    <link rel="shortcut icon" href="/img/logo cru.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />    
@@ -20,11 +21,11 @@
 
         <nav id="menu">
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Websites</a></li>
-                <li><a href="">Cftv</a></li>
-                <li><a href="">Redes</a></li>
-                <li><a href="">Suporte</a></li>
+                <li><a href="#menu">Inicio</a></li>
+                <li><a href="#web">Websites</a></li>
+                <li><a href="#camera">Cftv</a></li>
+                <li><a href="#redes">Redes</a></li>
+                <li><a href="#micro">Suporte</a></li>
             </ul>
         </nav>
 
@@ -174,21 +175,23 @@
             <div>
                 <h2>Ronin Sistemas</h2>
 
-                <nav>
+                <nav id="footer-menu">
                     <ul>
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Websites</a></li>
-                        <li><a href="">Cftv</a></li>
-                        <li><a href="">Redes</a></li>
-                        <li><a href="">Suporte</a></li>
+                        <li><a href="#home">Inicio</a></li>
+                        <li><a href="#web">Websites</a></li>
+                        <li><a href="#camera">Cftv</a></li>
+                        <li><a href="#redes">Redes</a></li>
+                        <li><a href="#micro">Suporte</a></li>
                     </ul>
                 </nav>
 
-                <nav id="social-link">                    
-                    <a href="https://www.facebook.com/ronintisolucoes" target="_blank"><img src="/img/facebook.svg" alt="logo do facebook"></a>
-                    <a href="https://www.instagram.com/ronin.sistemas/" target="_blank"><img src="/img/instagram.svg" alt="logo do instagram"></a>
-                    <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Ronin, te vi no google,preciso da ajuda de vocês" target="_blank"><img src="/img/whatsapp.svg" alt="logo do whatsapp"></a>                    
-                </nav>
+                <div>
+                    <nav id="social-link">                    
+                        <a href="https://www.facebook.com/ronintisolucoes" target="_blank"><img src="/img/facebook.svg" alt="logo do facebook"></a>
+                        <a href="https://www.instagram.com/ronin.sistemas/" target="_blank"><img src="/img/instagram.svg" alt="logo do instagram"></a>
+                        <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Ronin, te vi no google,preciso da ajuda de vocês" target="_blank"><img src="/img/whatsapp.svg" alt="logo do whatsapp"></a>                    
+                    </nav>
+                </div>
             </div>
 
             <div id="copyright">
