--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
 
         <a href="https://api.whatsapp.com/send?phone=5521981860460&text=Ronin, te vi no google,preciso da ajuda de vocês" target="_blank">
-            <button><i class="fa-brands fa-whatsapp fa-lg" style="color: #ffffff;"></i>  (21) 98186-0460</button>
+            <button><i class="fa-brands fa-whatsapp fa-lg" style="color: #ffffff;"></i> Conversar no whatsapp</button>
         </a>
     </header>
 
@@ -91,7 +91,7 @@
         
                 <div class="section-conteudo" id="web-conteudo">
                     <h2>Websites</h2>
-                    <div class="section-texto">
+                    <div class="section-texto" id="web-texto-container">
                         <div id="web-texto">
                             <div>
                                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Criação de websites e landing pages responsivos para todos os
@@ -116,17 +116,15 @@
                 <div>
                     <img class="esquerda" src="/img/tilt.svg" alt="divisor">
                 </div>
-                <div class="section-conteudo-esquerda">
+                <div class="section-conteudo-esquerda" id="camera-conteudo">
                     <h2>Câmeras de segurança</h2>
-                    <div class="section-texto-esquerda">
-                        <div>
-                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
-                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
-                            <p>lorem frogous brigous breteys crogs no joelho esquerdo e na ponta do dedo do pe com caimbra</p>
+                    <div class="section-texto-esquerda" id="camera-texto-container">
+                        <div id="camera-texto">
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Câmeras de segurança wifi ou cabeadas, internas ou externas. Vigie sua residência, comércio ou condomínio através do <strong>celular</strong> com nossas soluções de vigilância. Temos soluções internas com audio bi-direcional para vigiar bebês, enfermos, idosos ou pets.</p>                            
                         </div>
-                        <div>
-                            <img src="/img/camera_bullet_inteligente_full_hd_1080p_ip67_120_ir_30mts_2_8mm_intelbras_wi_fi_im5_s_3823_2_54c0a06a65218ff5da15bd7591ab32eb.webp"
-                                alt="">
+                        
+                        <div id="camera-imagem-container">
+                            <img id="camera-imagem" src="/img/camera.svg" alt="imagem de câmera">
                         </div>
                     </div>
                 </div>
