ajuste na descrição

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>Ronin Sistemas | Serviços de informática - Ilha do Governador - RJ</title>
     <meta name="title" content="Ronin Sistemas | Serviços de informática - Ilha do Governador - RJ" />
     <meta name="description"
-        content="Webdesign, criação de websites e landing pages, Montagem e manutenção de redes wifi e cabeadas, Suporte técnico de computadores torre e notebook, montagem de Pc gamer e sistemas de câmeras de segurança." />
+        content="Webdesign, criação de websites e landing pages, instalação e manutenção de redes wifi e cabeadas, Suporte técnico de computadores torre e notebook, montagem de Pc gamer e sistemas de câmeras de segurança." />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Ronin Sistemas | Serviços de informática - Ilha do Governador - RJ" />
+    <meta property="og:title" content="Ronin Sistemas - Serviços de informática - Ilha do Governador - RJ" />
     <meta property="og:description"
         content="Webdesign, criação de websites e landing pages, Montagem e manutenção de redes wifi e cabeadas, Suporte técnico de computadores torre e notebook, montagem de Pc gamer e sistemas de câmeras de segurança." />
     <meta property="og:image" content="./img/google logo novo transp.png" />
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="Ronin Sistemas | Serviços de informática - Ilha do Governador - RJ" />
     <meta property="twitter:description"
-        content="Webdesign, criação de websites e landing pages, Montagem e manutenção de redes wifi e cabeadas, Suporte técnico de computadores torre e notebook, montagem de Pc gamer e sistemas de câmeras de segurança." />
+        content="Webdesign, criação de websites e landing pages, Instalação e manutenção de redes wifi e cabeadas, Suporte técnico de computadores torre e notebook, montagem de Pc gamer e sistemas de câmeras de segurança." />
     <meta property="twitter:image" content="./img/google logo novo transp.png" />
     
     <!-- Meta Tags Generated with https://metatags.io -->
