--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 
                 <nav id="footer-menu">
                     <ul>
-                        <li><a href="#header">Inicio</a></li>
-                        <li><a href="#web">Websites</a></li>
-                        <li><a href="#camera">Cftv</a></li>
-                        <li><a href="#redes">Redes</a></li>
-                        <li><a href="#micro">Suporte</a></li>
+                        <li><a href="#header" name="inicio">Inicio</a></li>
+                        <li><a href="#web" name="web">Websites</a></li>
+                        <li><a href="#camera" name="camera">Cftv</a></li>
+                        <li><a href="#redes" name="redes">Redes</a></li>
+                        <li><a href="#micro" name="suporte">Suporte</a></li>
                     </ul>
                 </nav>
 
@@ -253,7 +253,9 @@
                 </div>
 
                 <div id="email">
-                    <p>contato@roninsistemas.com.br</p>
+                    <a href="mailto:contato@roninsistemas.com.br">
+                        <p>contato@roninsistemas.com.br</p>
+                    </a>
                 </div>
 
             </div>
